--- a/assets/index.html
+++ b/assets/index.html
@@ -24,7 +24,7 @@
       <include src="assets/templates/popup.html"></include>
 
 
-      <section class="section section-hero" style="background-image: url(../img/Main.png);">
+      <section class="section section-hero" style="background-image: url(img/Main.png);">
         <div class="overlay"></div>
         <div class="container">
           <div class="section-content">
@@ -242,7 +242,7 @@
       <section class="section section-video">
         <div class="container">
           <div class="video">
-            <img id="video-cover" src="img/video.png" alt="Video title">
+            <img id="video-cover" src="img/Video.png" alt="Video title">
             <iframe id="player" src="https://www.youtube.com/embed/7sbbb7Dt3D8" frameborder="0"
               allow="autoplay; encrypted-media" allowfullscreen></iframe>
             <button id="play" class="play-btn">
