--- a/markup/index.html
+++ b/markup/index.html
@@ -34,7 +34,7 @@
     <div class="container">
         <nav class="nav">
             <div class="logo">
-                <a href="index.html"><img alt="" src="img/logo.png"></a>
+                <a href="index.html"><img alt="" src="img/Logo.png"></a>
             </div>
             <span class="open-menu">
                 <span></span>
@@ -114,7 +114,7 @@
 </div>
 
 
-      <section class="section section-hero" style="background-image: url(../img/Main.png);">
+      <section class="section section-hero" style="background-image: url(img/Main.png);">
         <div class="overlay"></div>
         <div class="container">
           <div class="section-content">
@@ -332,7 +332,7 @@
       <section class="section section-video">
         <div class="container">
           <div class="video">
-            <img id="video-cover" src="img/video.png" alt="Video title">
+            <img id="video-cover" src="img/Video.png" alt="Video title">
             <iframe id="player" src="https://www.youtube.com/embed/7sbbb7Dt3D8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
             <button id="play" class="play-btn">
             </button>
@@ -500,7 +500,7 @@
     <div class="container">
         <nav class="nav">
             <div class="logo">
-                <a href="index.html"><img alt="" src="img/logo.png"></a>
+                <a href="index.html"><img alt="" src="img/Logo.png"></a>
             </div>
             <ul>
                 <li><a href="#data" class="go-to">How it works</a></li>
