--- a/markup/index.html
+++ b/markup/index.html
@@ -443,7 +443,7 @@
         <div class="container">
           <h5>Service Available</h5>
           <div class="section-content">
-            <img src="img/map.png" alt="">
+            <img src="img/Map.png" alt="">
           </div>
         </div>
       </section>
