--- a/markup/index.html
+++ b/markup/index.html
@@ -50,65 +50,16 @@
 </header>
 
       <!-- Popup -->
-      <!-- Любой попап вызываеться при нажатии на кнопку с названием без приставки modall( politic,thank) -->
-
-<div class="modall modall-politic">
-    <div class="modall-body">
-        <span class="close"></span>
-        <h2>Политика Конфиденциальности</h2>
-        <div class="politics-body">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore
-                et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
-                maecenas
-                accumsan lacus vel facilisis.
-            </p>
-            <h3>Quis ipsum suspendisse</h3>
-            <ul>
-                <li>
-                    <p> Quis ipsum suspendisse </p>
-                </li>
-                <li>
-                    <p> Quis ipsum suspendisse </p>
-                </li>
-                <li>
-                    <p> Quis ipsum suspendisse </p>
-                </li>
-            </ul>
-            <h3>Quis ipsum suspendisse</h3>
-            <ol type="1">
-                <li>
-                    <p> Quis ipsum suspendisse </p>
-                </li>
-                <li>
-                    <p> Quis ipsum suspendisse </p>
-                </li>
-                <li>
-                    <p> Quis ipsum suspendisse </p>
-                </li>
-            </ol>
-            <ol type="1">
-                <li>
-                    <p> Quis ipsum suspendisse </p>
-                </li>
-                <li>
-                    <p> Quis ipsum suspendisse </p>
-                </li>
-                <li>
-                    <p> Quis ipsum suspendisse </p>
-                </li>
-            </ol>
-        </div>
-    </div>
-</div>
-
-<div class="modall modall-thank">
+      <div class="modall modall-video">
     <div class="modall-body">
         <span class="close"></span>
         <div class="content">
-            <h2>Спасибо за заявку!</h2>
-            <p>Наши менеджеры свяжутся с вами в скором времени для уточнения деталей заказа.</p>
+            <div class="video">
+                <img id="video-cover" src="img/Video.png" alt="Video title">
+                <iframe id="player" src="https://www.youtube.com/embed/7sbbb7Dt3D8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                <button id="play" class="play-btn">
+                </button>
+            </div>
         </div>
     </div>
 </div>
