--- a/assets/index.html
+++ b/assets/index.html
@@ -167,7 +167,7 @@
         <div class="container">
           <div class="section-content">
             <h5>Our Partners say</h5>
-            <div class="list">
+            <div class="list" id='reviews'>
               <div class="item">
                 <div class="content-left">
                   <span class="description">
@@ -217,7 +217,7 @@
                 </div>
               </div>
             </div>
-            <button class="next">Next testimonial</button>
+            <button class="next" id="next">Next testimonial</button>
           </div>
         </div>
       </section>
@@ -295,7 +295,7 @@
         <div class="container">
           <div class="section-content">
             <h5>Our Partners say</h5>
-            <div class="list">
+            <div class="list" id='reviews2'>
               <div class="item">
                 <div class="content-left">
                   <span class="description">
@@ -345,7 +345,7 @@
                 </div>
               </div>
             </div>
-            <button class="next">Next testimonial</button>
+            <button class="next" id="next2">Next testimonial</button>
           </div>
         </div>
       </section>
