--- a/markup/index.html
+++ b/markup/index.html
@@ -56,8 +56,8 @@
         <div class="content">
             <div class="video">
                 <img id="video-cover" src="img/Video.png" alt="Video title">
-                <iframe id="player" src="https://www.youtube.com/embed/7sbbb7Dt3D8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-                <button id="play" class="play-btn">
+                <iframe id="playerPopoup" data-youtube="https://www.youtube.com/embed/7sbbb7Dt3D8?autoplay=1" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                <button id="play2" class="play-btn">
                 </button>
             </div>
         </div>
@@ -208,7 +208,7 @@
         <div class="container">
           <div class="section-content">
             <h5>Our Partners say</h5>
-            <div class="list">
+            <div class="list" id="reviews">
               <div class="item">
                 <div class="content-left">
                   <span class="description">
@@ -258,7 +258,7 @@
                 </div>
               </div>
             </div>
-            <button class="next">Next testimonial</button>
+            <button class="next" id="next">Next testimonial</button>
           </div>
         </div>
       </section>
@@ -335,7 +335,7 @@
         <div class="container">
           <div class="section-content">
             <h5>Our Partners say</h5>
-            <div class="list">
+            <div class="list" id="reviews2">
               <div class="item">
                 <div class="content-left">
                   <span class="description">
@@ -385,7 +385,7 @@
                 </div>
               </div>
             </div>
-            <button class="next">Next testimonial</button>
+            <button class="next" id="next2">Next testimonial</button>
           </div>
         </div>
       </section>
