--- a/assets/index.html
+++ b/assets/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Carma</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <meta name="cmsmagazine" content="5a7189a28fb3dc68238dbdb44c9ea99c" />
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
   <link rel="stylesheet" href="css/style.min.css" data-inprogress="">
   <link rel="stylesheet" href="css/home.min.css" data-inprogress="">
 
@@ -264,7 +262,7 @@
               <div class="content">
                 <span class="name">Ted Martynov</span>
                 <span class="position">CEO</span>
-                <a href="#" class="social"><img src="img/linkedin.svg"></a>
+                <a href="#" class="social"><img src="img/linkedin.svg" alt=''></a>
               </div>
             </div>
             <div class="item">
@@ -274,7 +272,7 @@
               <div class="content">
                 <span class="name">Lina Milyutina</span>
                 <span class="position">CTO</span>
-                <a href="#" class="social"><img src="img/linkedin.svg"></a>
+                <a href="#" class="social"><img src="img/linkedin.svg" alt=''></a>
               </div>
             </div>
             <div class="item">
@@ -284,7 +282,7 @@
               <div class="content">
                 <span class="name">Johan Williams</span>
                 <span class="position">CMO</span>
-                <a href="#" class="social"><img src="img/linkedin.svg"></a>
+                <a href="#" class="social"><img src="img/linkedin.svg" alt=''></a>
               </div>
             </div>
           </div>
@@ -362,8 +360,10 @@
       <!-- Form -->
       <include src="assets/templates/form.html"></include>
     </main>
+
     <!-- Footer -->
     <include src="assets/templates/footer.html"></include>
+
   </div>
 
 
