--- a/markup/index.html
+++ b/markup/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Carma</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <meta name="cmsmagazine" content="5a7189a28fb3dc68238dbdb44c9ea99c">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
   <link rel="stylesheet" href="css/style.min.css" data-inprogress="">
   <link rel="stylesheet" href="css/home.min.css" data-inprogress="">
 
@@ -55,7 +53,7 @@
         <span class="close"></span>
         <div class="content">
             <div class="video">
-                <img id="video-cover" src="img/Video.png" alt="Video title">
+                <img id="video-cover2" src="img/Video.png" alt="Video title">
                 <iframe id="playerPopoup" data-youtube="https://www.youtube.com/embed/7sbbb7Dt3D8?autoplay=1" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                 <button id="play2" class="play-btn">
                 </button>
@@ -304,7 +302,7 @@
               <div class="content">
                 <span class="name">Ted Martynov</span>
                 <span class="position">CEO</span>
-                <a href="#" class="social"><img src="img/linkedin.svg"></a>
+                <a href="#" class="social"><img src="img/linkedin.svg" alt=""></a>
               </div>
             </div>
             <div class="item">
@@ -314,7 +312,7 @@
               <div class="content">
                 <span class="name">Lina Milyutina</span>
                 <span class="position">CTO</span>
-                <a href="#" class="social"><img src="img/linkedin.svg"></a>
+                <a href="#" class="social"><img src="img/linkedin.svg" alt=""></a>
               </div>
             </div>
             <div class="item">
@@ -324,7 +322,7 @@
               <div class="content">
                 <span class="name">Johan Williams</span>
                 <span class="position">CMO</span>
-                <a href="#" class="social"><img src="img/linkedin.svg"></a>
+                <a href="#" class="social"><img src="img/linkedin.svg" alt=""></a>
               </div>
             </div>
           </div>
@@ -446,6 +444,7 @@
     </div>
 </div></section>
     </main>
+
     <!-- Footer -->
     <footer class="footer">
     <div class="container">
@@ -470,6 +469,7 @@
         </div>
     </div>
 </footer>
+
   </div>
 
 
