--- a/assets/index.html
+++ b/assets/index.html
@@ -115,9 +115,16 @@
                       </span>
                       <p class="text-align">For every data hit.</p>
                     </li>
+                    <li class="hide">
+                      <img src="img/Get-Paid.png" alt="">
+                      <span class="title">
+                        more
+                      </span>
+                      <p>more text</p>
+                    </li>
                   </ul>
                   <div class="action">
-                    <a href="#" class="btn">Learn more</a>
+                    <a href="javascript:void(0);" class="btn show">Learn more</a>
                   </div>
                 </div>
               </div>
@@ -149,9 +156,16 @@
                       </span>
                       <p class="text-align">No data, no fees.</p>
                     </li>
+                    <li class="hide">
+                      <img src="img/Get-Paid.png" alt="">
+                      <span class="title">
+                        more
+                      </span>
+                      <p>more text</p>
+                    </li>
                   </ul>
                   <div class="action">
-                    <a href="#" class="btn">Learn more</a>
+                    <a href="javascript:void(0);" class="btn show">Learn more</a>
                   </div>
                 </div>
               </div>
