--- a/markup/index.html
+++ b/markup/index.html
@@ -20,10 +20,10 @@
     <span class="close-menu"></span>
     <nav>
         <ul>
-            <li><a href="#data" class="go-to">How it works</a></li>
-            <li><a href="#about" class="go-to">About us</a></li>
-            <li><a href="documentation.html">Documentation</a></li>
-            <li><a href="#form" class="btn go-to">Contact us</a></li>
+            <li><a href="index.html#data" class="go-to">How it works</a></li>
+            <li><a href="index.html#about" class="go-to">About us</a></li>
+            <li><a href="documents.html">Documentation</a></li>
+            <li><a href="index.html#form" class="btn go-to">Contact us</a></li>
         </ul>
     </nav>
 </div>
@@ -38,10 +38,10 @@
                 <span></span>
             </span>
             <ul class="desctop-menu">
-                <li><a href="#data" class="go-to">How it works</a></li>
-                <li><a href="#about" class="go-to">About us</a></li>
-                <li><a href="documentation.html">Documentation</a></li>
-                <li><a href="#form" class="btn go-to">Contact us</a></li>
+                <li><a href="index.html#data" class="go-to">How it works</a></li>
+                <li><a href="index.html#about" class="go-to">About us</a></li>
+                <li><a href="documents.html">Documentation</a></li>
+                <li><a href="index.html#form" class="btn go-to">Contact us</a></li>
             </ul>
         </nav>
     </div>
@@ -156,9 +156,16 @@
                       </span>
                       <p class="text-align">For every data hit.</p>
                     </li>
+                    <li class="hide">
+                      <img src="img/Get-Paid.png" alt="">
+                      <span class="title">
+                        more
+                      </span>
+                      <p>more text</p>
+                    </li>
                   </ul>
                   <div class="action">
-                    <a href="#" class="btn">Learn more</a>
+                    <a href="javascript:void(0);" class="btn show">Learn more</a>
                   </div>
                 </div>
               </div>
@@ -190,9 +197,16 @@
                       </span>
                       <p class="text-align">No data, no fees.</p>
                     </li>
+                    <li class="hide">
+                      <img src="img/Get-Paid.png" alt="">
+                      <span class="title">
+                        more
+                      </span>
+                      <p>more text</p>
+                    </li>
                   </ul>
                   <div class="action">
-                    <a href="#" class="btn">Learn more</a>
+                    <a href="javascript:void(0);" class="btn show">Learn more</a>
                   </div>
                 </div>
               </div>
@@ -455,7 +469,7 @@
             <ul>
                 <li><a href="#data" class="go-to">How it works</a></li>
                 <li><a href="#about" class="go-to">About us</a></li>
-                <li><a href="documentation.html">Documentation</a></li>
+                <li><a href="documents.html">Documentation</a></li>
                 <li><a href="#form" class="go-to">Contact us</a></li>
             </ul>
         </nav>
