--- a/markup/documents.html
+++ b/markup/documents.html
@@ -133,10 +133,10 @@
                 <a href="index.html"><img alt="" src="img/Logo.png"></a>
             </div>
             <ul>
-                <li><a href="#data" class="go-to">How it works</a></li>
-                <li><a href="#about" class="go-to">About us</a></li>
+                <li><a href="index.html#data" class="go-to">How it works</a></li>
+                <li><a href="index.html#about" class="go-to">About us</a></li>
                 <li><a href="documents.html">Documentation</a></li>
-                <li><a href="#form" class="go-to">Contact us</a></li>
+                <li><a href="index.html#form" class="go-to">Contact us</a></li>
             </ul>
         </nav>
         <div class="socials">
